--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Bootstrap Application</title>
-  </head>
+<head>
+ <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
  
   <body>
- 
+    <h1>Hello world</h1>
+
+
+    <script src="js/jquery-1.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
