Bootstrap stylesheet fix and ready to go

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Bootstrap Code sample</title>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   
 
   <!-- NOTE: I'm adding this because Bootstrap 3 uses many HTML5 elements and CSS3 properties that wonʼt work in Internet Explorer8. To add some scripts that will only be called into action when the website is opened in IE8, bringing support for HTML5 and CSS3 in it.-->
@@ -16,7 +18,10 @@
 </head>
  
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <h1>Hello world</h1>
+    </div>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
 
 
     <script src="js/jquery-1.js"></script>
