Title and       <code>Multiple headings to show use of the HTML header hierarchy</code>

--- a/index.html
+++ b/index.html
@@ -18,10 +18,28 @@
 </head>
  
   <body>
+
+  <div class="container">
+   <div class="jumbotron">
+     <h1> My family, code, Travel and Photography are my Passion and hobbies </h1>
+       <code>###</code> 
+   </div>
+        
+      <code> 1. Multiple headings to show use of the HTML header hierarchy</code> 
+
+      <h1>This is a h1 heading <small>I like bootstrap</small></h1>
+      <h2>This is a h2 heading <small>I love JS</small></h2>
+      <h3>This is a h3 heading <small>Macs are cool</small></h3>
+      <h4>This is a h4 heading <small>Node.js rocks</small></h4>
+      <h5>This is a h5 heading <small>Front end dev</small></h5>
+      <h6>This is a h6 heading <small>Back end dev</small></h6>
+
+  </div>
     <div class="container">
       <h1>Hello world</h1>
     </div>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
+
 
 
     <script src="js/jquery-1.js"></script>
