--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">   
   <title>My Bootstrap Code sample</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   
 
   <!-- NOTE: I'm adding this because Bootstrap 3 uses many HTML5 elements and CSS3 properties that wonʼt work in Internet Explorer8. To add some scripts that will only be called into action when the website is opened in IE8, bringing support for HTML5 and CSS3 in it.-->
@@ -61,10 +62,33 @@
     </nav>
 
 
+
+<div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">Export</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item</a></li>
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+            <li><a href="">More navigation</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+          </ul>
+        </div>
   
   <!-- Content -->
-
-
+<div id="page-wrapper">
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
   <div class="container">
    <div class="jumbotron">
      
@@ -183,6 +207,12 @@
         </address>
       </footer>
       </div>
+</div>
+</div>
+</div>
+
+
+
     <script src="js/jquery-1.js"></script>
     <script src="js/bootstrap.js"></script>
 
