--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Hobbies CT</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
+  <link rel="stylesheet" type="text/css" href="css/style-1.css">
 
   <!-- NOTE: I'm adding this because Bootstrap 3 uses many HTML5 elements and CSS3 properties that wonʼt work in Internet Explorer8. To add some scripts that will only be called into action when the website is opened in IE8, bringing support for HTML5 and CSS3 in it.-->
 
@@ -183,7 +183,7 @@
                 <div class="row"> 
                 <div class="col-md-6">
                   <h1 class="text-info">Heading <small>I love bootstrap</small></h1>
-                  <h2> Heading <small class="text-danger">I love JS</small></h2>
+                  <h2> Sass Variable<small class="text-danger">I love Sass and Less</small></h2>
                   <h3 class="text-success">Heading <small><kbd>Macs are cool</kbd></small></h3>
                 </div>
                 <div class="col-md-6">
