--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   <![endif]-->
 
 </head>
- 
+
   <body>
-      
- 
+
+
 
       <div class="page-container">
-        
+
         <!-- top navbar -->
           <div class="navbar navbar-default navbar-fixed-top" role="navigation">
              <div class="container">
             <div class="navbar-header">
-                 <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#bs-navbar-collapse">
+                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
                    <span class="icon-bar"></span>
                    <span class="icon-bar"></span>
                    <span class="icon-bar"></span>
@@ -41,10 +41,10 @@
                               <a href="http://juanjob.info">About</a>
                           </li>
                           <li>
-                              <a href="https://www.flickr.com/photos/jjir/">Photography <span class="badge">2</span></a>
+                              <a href="https://www.flickr.com/photos/jjir/">Photography <span class="badge"></span></a>
                           </li>
                           <li>
-                              <a href="http://juanjob.info/assets/JuanJobRodriguezCV_02_NoPic.pdf">Resume<span class="badge">3</span></a>
+                              <a href="http://juanjob.info/assets/JuanJobRodriguezCV_02_NoPic.pdf">Resume<span class="badge"></span></a>
                           </li>
                       </ul>
                       <ul class="nav navbar-nav navbar-right">
